feat(persona): add full 5-level precise zh_CN address with realistic AI story & SiliconFlow Image generation

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,12 @@ nosetests.xml
 *.ipr
 venv/
 .vscode
+
+# --- Local test files & Secrets ---
+.env
+.env.*
+!.env.example
+test_*.txt
+test_*.log
+test_ai_persona.py
+test_full.py
